--- a/wcalc/templates/includes/meta_tags.html
+++ b/wcalc/templates/includes/meta_tags.html
@@ -3,7 +3,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap5.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/fixedColumns.bootstrap5.min.css' %}">
