--- a/wcalc/templates/dealcard/index.html
+++ b/wcalc/templates/dealcard/index.html
@@ -202,6 +202,7 @@
       }
 
       $(document).ready(function () {
+          calculationValues();
           calculateTotals();
           checkPallet();
           $('#main-table').DataTable({
