Add checkPackages function

--- a/wcalc/templates/dealcard/index.html
+++ b/wcalc/templates/dealcard/index.html
@@ -118,8 +118,8 @@
               total_tonnage += parseFloat(element.innerHTML.replace(",", "."));
           });
           td_total_tonnage.innerHTML = total_tonnage.toFixed(2);
-          checkPallet();
-          checkPackages();
+          const flag = checkPallet();
+          checkPackages(flag);
       }
 
       function checkPallet() {
@@ -140,13 +140,15 @@
           if (Math.round(value) !== parseFloat(value)) {
               td_total_quantity_pallet.classList.add('bg-danger', 'text-white');
               btn_send_deal.disabled = true;
+              return false;
           } else {
               td_total_quantity_pallet.classList.remove('bg-danger', 'text-white');
               btn_send_deal.disabled = false;
+              return true;
           }
       }
 
-      function checkPackages() {
+      function checkPackages(flag) {
           let quantity_packages = document.querySelectorAll('[data-name="quantity-packages"]');
           let td_total_quantity_packages = document.querySelector('#total-quantity-packages');
           let btn_send_deal = document.querySelector('#btn-send-deal');
@@ -166,7 +168,9 @@
               btn_send_deal.disabled = true;
           } else {
               td_total_quantity_packages.classList.remove('bg-danger', 'text-white');
-              btn_send_deal.disabled = false;
+              if (flag) {
+                  btn_send_deal.disabled = false;
+              }
           }
       }
 
@@ -228,8 +232,8 @@
 
       $(document).ready(function () {
           calculateTotals();
-          checkPallet();
-          checkPackages();
+          const flag = checkPallet();
+          checkPackages(flag);
           $('#main-table').DataTable({
               dom: '<"row"<"col-4"B><"col-8 d-flex justify-content-end"l<"ms-3"f>>>rtip',
               scrollX: true,
