--- a/wcalc/templates/dealcard/index.html
+++ b/wcalc/templates/dealcard/index.html
@@ -123,7 +123,7 @@
       }
 
       function checkPallet() {
-          let flag = 1;
+          let flag = false;
           let quantity_pallet = document.querySelectorAll('[data-name="quantity-pallet"]');
           let td_total_quantity_pallet = document.querySelector('#total-quantity-pallet');
           let btn_send_deal = document.querySelector('#btn-send-deal');
@@ -131,11 +131,9 @@
               const value = element.innerHTML.replace(",", ".");
               if (Math.round(value) !== parseFloat(value)) {
                   element.classList.add('bg-danger', 'text-white');
-                  btn_send_deal.disabled = true;
-                  flag = 0;
+                  flag = true;
               } else {
                   element.classList.remove('bg-danger', 'text-white');
-                  btn_send_deal.disabled = false;
               }
           });
           const value = td_total_quantity_pallet.innerHTML.replace(",", ".");
@@ -144,6 +142,7 @@
           } else {
               td_total_quantity_pallet.classList.remove('bg-danger', 'text-white');
           }
+          btn_send_deal.disabled = flag;
           return flag;
       }
 
@@ -155,11 +154,9 @@
               const value = element.innerHTML.replace(",", ".");
               if (Math.round(value) !== parseFloat(value)) {
                   element.classList.add('bg-danger', 'text-white');
-                  btn_send_deal.disabled = true;
+                  flag = true;
               } else {
                   element.classList.remove('bg-danger', 'text-white');
-                  if (flag === 1)
-                    btn_send_deal.disabled = false;
               }
           });
           const value = td_total_quantity_packages.innerHTML.replace(",", ".");
@@ -168,6 +165,7 @@
           } else {
               td_total_quantity_packages.classList.remove('bg-danger', 'text-white');
           }
+          btn_send_deal.disabled = flag;
       }
 
       function calculationValues(productrow_id, package_id) {
